added and updated new pages

--- a/index.html
+++ b/index.html
@@ -28,36 +28,37 @@
 		<div class="contentbox">
 			<div id="item6" class="content"> 
 				<a href="https://www.cmu.edu/physics/people/graduate-students.html" target="_blank"><img src="logos/cmu-mascot-3-color-on-w.png" alt="CMU" class="logo"></a>
-				<a href="https://www.cmu.edu/physics/people/graduate-students.html" target="_blank"><h2>Carnegie Mellon University</h2></a>
+				<a class="title" href="https://www.cmu.edu/physics/people/graduate-students.html" target="_blank"><h2>Carnegie Mellon University</h2></a>
 				<p id="cmu"></p>
 				<p>I'm on a Physics PhD track due to graduate in 2024 (hopefully).</p>
 				<p>I'm currently studying Lattice QCD for my thesis under the mentorship of Dr. Colin Morningstar.</p>
+				<p>Check out my <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Skinner%2C+Sarah%3B&terms-0-field=author&classification-physics=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=hide&size=50&order=-announced_date_first" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p>
 			</div>
 			<div id="item1" class="content"> 
 				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
-				<a href="https://github.com/xinucode" target="_blank"><h2>Github</h2></a>
+				<a  class="title" href="https://github.com/xinucode" target="_blank"><h2>Github</h2></a>
 				<p id="github"></p>
-				<p>See my contributions to collaborations as well as individual projects.</p>
+				<p>See my code contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
-				<p id="linkedin">Check out my resume.</p>
+				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
+				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
 			</div>
 			<div id="item2" class="content">
 				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
-				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><h2>Upwork</h2></a>
+				<a  class="title" href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><h2>Upwork</h2></a>
 				<p>Hire me online as a freelancer.</p>
 				<p id="upwork"></p>
 			</div>
 			<div id="item5" class="content">
 				<a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
-				<a href="xinucode.html"><h2>xinu-code</h2></a>
+				<a  class="title" href="xinucode.html"><h2>xinu-code</h2></a>
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
 				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/logos/instagram.JPG" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
-				<a href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/logos/instagram.JPG" target="_blank"><h2>Instagram</h2></a>
+				<a  class="title" href="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/logos/instagram.JPG" target="_blank"><h2>Instagram</h2></a>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
 			</div>
