--- a/xinucode.html
+++ b/xinucode.html
@@ -81,7 +81,7 @@
 				<h3>Sample Projects:</h3>
 				<div class="samplescrollbox">
 					<div class="sample">
-						<a href="https://github.com/xinucode/yWriter7_conversions" target="_blank"><img src="logos/ywriter9_snippet.png" alt="ywriter9_conversion" class="logo2"></a>
+						<a href="https://github.com/xinucode/yWriter7_conversions" target="_blank"><img src="logos/ywriter9_snippet.PNG" alt="ywriter9_conversion" class="logo2"></a>
 						<a href="https://github.com/xinucode/yWriter7_conversions" target="_blank"><h3>yWriter7 Conversions</h3></a>
 						<p>Conversion software that uses python to converts the output of a free writing software into several unique formats including a Shunn formatted document via Rich Text Format, bookstyle laTeX PDF, and HTML/PHP E-Reader.</p>
 					</div>
