--- a/xinucode.html
+++ b/xinucode.html
@@ -130,8 +130,8 @@
 		<div class="header">
 			<hr>
 			<div id="jim" class="randomemoji"></div><!--this div is empty on purpose. The javascript code is going to put something here-->
-			<a href="#title" class="backtotop" id="backtotop" style="color:black;">Back to top</a><br>
-			<a href="https://xinucode.github.io/" class="backtotop" style="color:black;">Back to my site</a>
+			<a href="#title" class="backtotop" id="backtotop" style="color:white;">Back to top</a><br>
+			<a href="https://xinucode.github.io/" class="backtotop" id="backtotop2" style="color:white;">Back to my site</a>
 		</div>
 	
 	</div>
