added abstracts in arxiv search query link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p id="cmu"></p>
 				<p>I'm on a Physics PhD track due to graduate in 2024 (hopefully).</p>
 				<p>I'm currently studying Lattice QCD for my thesis under the mentorship of Dr. Colin Morningstar.</p>
-				<p>Check out my <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Skinner%2C+Sarah%3B&terms-0-field=author&classification-physics=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=hide&size=50&order=-announced_date_first" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p>
+				<p>Check out my <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Skinner%2C+Sarah%3B&terms-0-field=author&classification-physics=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p>
 			</div>
 			<div id="item1" class="content"> 
 				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
