added another sample project to xinucode site

--- a/xinucode.html
+++ b/xinucode.html
@@ -52,7 +52,7 @@
 				<p>Python, C++, Fortran, HTML5, bash/batch scripting</p>
 			</div>
 			<div id="item4" class="header2"> <!--to modify the style, look at div.content in the style section-->
-				<acronym title="See my site!"><a href="https://xinucode.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo"></a></acronym>
+				<acronym title="See my site!"><a href="https://xinucode.github.io/"><img src="logos/MeLogo3.png" alt="Xinu" class="logo" id="melogo"></a></acronym>
 				<h3>Who am I?</h3>
 				<p>My name is Sarah Skinner. You can see my personal page by clicking my logo. I have experience tutoring code to a wide range of age groups. It's never too early
 				nor too late.</p>
@@ -84,6 +84,11 @@
 						<a href="https://github.com/xinucode/yWriter7_conversions" target="_blank"><img src="logos/ywriter9_snippet.PNG" alt="ywriter9_conversion" class="logo2"></a>
 						<a href="https://github.com/xinucode/yWriter7_conversions" target="_blank"><h3>yWriter7 Conversions</h3></a>
 						<p>Conversion software that uses python to converts the output of a free writing software into several unique formats including a Shunn formatted document via Rich Text Format, bookstyle laTeX PDF, and HTML/PHP E-Reader.</p>
+					</div>
+					<div class="sample">
+						<a href="https://github.com/xinucode/MCMHMC-1D-SHO" target="_blank"><img src="logos/sho_spectrum_analytic.png" alt="sho_spectrum" class="logo2"></a>
+						<a href="https://github.com/xinucode/MCMHMC-1D-SHO" target="_blank"><h3>Lattice SHO Simulation</h3></a>
+						<p>Jupyter Notebook toy model that uses the Monte Carlo concepts for my thesis work (Lattice QCD) and applies to a single harmonic oscillator (SHO).</p>
 					</div>
 					<div class="sample">
 						<a href="https://github.com/xinucode/xmgrace_parser" target="_blank"><img src="logos/xmgrace_example.png" alt="grace_logo" class="logo2"></a>
