fixed poster label recolor

--- a/posters.html
+++ b/posters.html
@@ -31,8 +31,8 @@
 		<div class="contentbox2">
 			<iframe id="poster1" src="posters/SkinnerPoster.pdf" height="900" width="100%"></iframe>
 			<div class="header">
-				<p id="backtotop"> This poster won a <a href="https://www.jlab.org/education/hugs/hugsprizes">poster prize</a></p>
-				<a href="posters/SkinnerPoster.pdf" target="_blank" id="backtotop">Open in new tab</a>
+				<p id="backtotop3"> This poster won a <a href="https://www.jlab.org/education/hugs/hugsprizes">poster prize</a></p>
+				<a href="posters/SkinnerPoster.pdf" target="_blank" id="backtotop4">Open in new tab</a>
 				<hr>
 			</div>
 			<!-- <div class="header"> -->
@@ -40,17 +40,17 @@
 			<!-- </div> -->
 			<iframe id="poster2" src="posters/Copy of poster2.pdf" height="900" width="100%"></iframe>
 			<div class="header">
-				<a href="posters/Copy of poster2.pdf" target="_blank" id="backtotop">Open in new tab</a>
+				<a href="posters/Copy of poster2.pdf" target="_blank" id="backtotop5">Open in new tab</a>
 				<hr>
 			</div>
 			<iframe id="poster3" src="posters/SKINNER_S_poster.pdf" height="900" width="100%"></iframe>
 			<div class="header">
-				<a href="posters/SKINNER_S_poster.pdf" target="_blank" id="backtotop">Open in new tab</a>
+				<a href="posters/SKINNER_S_poster.pdf" target="_blank" id="backtotop6">Open in new tab</a>
 				<hr>
 			</div>
 			<iframe id="poster4" src="posters/Final Poster (3).pdf" height="900" width="100%"></iframe>
 			<div class="header">
-				<a href="posters/Final Poster (3).pdf" target="_blank" id="backtotop">Open in new tab</a>
+				<a href="posters/Final Poster (3).pdf" target="_blank" id="backtotop7">Open in new tab</a>
 			</div>
 		</div>
 		<div class="header">
