--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
 				<p id="upwork"></p>
 			</div>
 			<div id="item5" class="content">
+				<a href="https://www.xinuwrite.com/"><img src="logos/MeLogo3-circle-417077.png" alt="Xinuwrite" class="logo"></a>
+				<a  class="title" href="https://www.xinuwrite.com/"><h2>Xinuwrite</h2></a>
+				<p>Building a writing habit? Check out the site I developed and manage: Xinuwrite, the Daily Writing Challenge.</p>
+			</div>
+			<div id="item5" class="content">
 				<a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
-				<a  class="title" href="xinucode.html"><h2>xinu-code</h2></a>
+				<a  class="title" href="xinucode.html"><h2>Xinucode</h2></a>
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
