--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 				<p>Want to learn how to code? Check out my project-based tutoring.</p>
 			</div>
 			<div id="item4" class="content">
-				<a href="https://www.instagram.com/sssm8d/" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
-				<a  class="title" href="https://www.instagram.com/sssm8d/" target="_blank"><h2>Instagram</h2></a>
+				<a href="https://www.instagram.com/rockstar_the_rockstar/" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
+				<a  class="title" href="https://www.instagram.com/rockstar_the_rockstar/" target="_blank"><h2>Instagram</h2></a>
 				<p>Look at pictures of my cat Rockstar.</p>
 				<p id="insta"></p>
 			</div>
