--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 				<a  class="title" href="https://www.xinuwrite.com/"><h2>Xinuwrite</h2></a>
 				<p>Building a writing habit? Check out the site I developed and manage: Xinuwrite, the Daily Writing Challenge.</p>
 			</div>
-			<div id="item5" class="content">
-				<a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a>
-				<a  class="title" href="xinucode.html"><h2>Xinucode</h2></a>
-				<p>Want to learn how to code? Check out my project-based tutoring.</p>
-			</div>
+			<!-- <div id="item5" class="content"> -->
+				<!-- <a href="xinucode.html"><img src="logos/MeLogo3-purple-circle2.png" alt="xinu-code" class="logo"></a> -->
+				<!-- <a  class="title" href="xinucode.html"><h2>Xinucode</h2></a> -->
+				<!-- <p>Want to learn how to code? Check out my project-based tutoring.</p> -->
+			<!-- </div> -->
 			<div id="item4" class="content">
 				<a href="https://www.instagram.com/rockstar_the_rockstar/" target="_blank"><img src="logos/insta.png" alt="Instagram" class="logo"></a>
 				<a  class="title" href="https://www.instagram.com/rockstar_the_rockstar/" target="_blank"><h2>Instagram</h2></a>
