filled out with more info

--- a/neutriNO.html
+++ b/neutriNO.html
@@ -5,29 +5,52 @@
     body {
 		background-image: url('neutriNO-images/grid.gif');
 		background-repeat: repeat;
-        font-family: 'Comic Sans MS', cursive, sans-serif;
+        font-family: 'Comic Sans MS', sans-serif;
+		margin: 30px;
+		text-align: center;
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
     }
-    p {
-        color: blue;
+    p,ul {
+        color: orange;
+		text-align: left;
     }
+	div.column {
+		max-width: 700px;
+		align-self: center;
+	}
 </style>
 </head>
 <body>
 
-<h1>Neutrinos: The Mysterious Particles</h1>
+<div class="column">
+	<h1>neutriNO</h1>
+	<h2>Neutrinos are probably not real</h2>
 
-<p>Neutrinos are subatomic particles that are extremely difficult to detect due to their extremely small mass and lack of charge. They were first proposed in 1930 by physicist Wolfgang Pauli, and were later discovered by Clyde Cowan and Frederick Reines in 1956.</p>
-<h2>Facts about Neutrinos:</h2>
-<ul>
-  <li>Neutrinos are produced by nuclear reactions, such as those in the sun and other stars.</li>
-  <li>They are also produced by natural processes such as supernovae and cosmic ray interactions.</li>
-  <li>Neutrinos have a very small, but non-zero mass.</li>
-  <li>They can come in three different "flavors": electron, muon, and tau.</li>
-  <li>Neutrinos can change "flavor" as they travel, a process known as neutrino oscillation.</li>
-  <li>They interact very weakly with other matter, making them difficult to detect.</li>
-  <li>Neutrinos are estimated to be the second most abundant particle in the universe, after photons.</li>
-  <li>They are thought to play a key role in the formation and evolution of galaxies and stars.</li>
-</ul>
-<p>Despite their elusive nature, neutrinos play a crucial role in our understanding of the universe. Scientists continue to study these mysterious particles in order to unlock their secrets and further our knowledge of the cosmos.</p>
+	<p>Neutrinos are subatomic particles that are extremely difficult to detect due to their extremely small mass and lack of charge. They were first proposed in 1930 by physicist Wolfgang Pauli, and were later "discovered" by Clyde Cowan and Frederick Reines in 1956. The dawn of neutrino experiments were closely tied to post world war 2 American 
+	nuclear weapons fabrication. This is no coincidence.</p>
+	<p> These locations were supposedly chosen because the running reactor, that were being used to 
+	create Plutonium for nuclear weapons, would create enough neutrinos from those nuclear 
+	reactions to be detected by these experiments placed close by.  But these experiments become 
+	much more sinister when you realize that there are no neutrinos. 
+	</p>
+	<p>These experiments allowed these scientists and their colliegs access to some of the 
+	governments most secure locations. Places guarded by armed men and requiring the highest of 
+	security clearances. Neutrino experiments were a convinient excuse for these men, likely 
+	Russian agents, to acces these spaces. Not only could they access the cites, but had they 
+	brought with them literal tons of equipment, see picture below. This equipment was actually the 
+	highest quality surveillance equipment, including cameras, listening devices, and chemical and 
+	radiation detectors, disguised as physics equipment, that could be used to reverse engineer  the 
+	US’s nuclear enrichment methods. </p>
+	<h2>"Facts" about Neutrinos:</h2>
+	<ul>
+	  <li>Neutrinos have a very small, but non-zero mass. Conveinient</li>
+	  <li>They interact very weakly with other matter, making them difficult to detect. Event more conveinient.</li>
+	  <li>Neutrinos are estimated to be the second most abundant particle in the universe, after photons. Then where are they</li>
+	  <li>Neutrinos are produced by nuclear reactions, such as those in the sun and other stars. Of course they want anothre reason to study nuclear reactions.</li>
+	</ul>
+	
+</div>
 </body>
 </html>
