--- a/neutriNO.html
+++ b/neutriNO.html
@@ -3,7 +3,7 @@
 <title>Neutrinos: The Mysterious Particles</title>
 <style>
     body {
-		background-image: url('neutriNO-images/grid.gif');
+		background-image: url('neutriNO-images/grid3.png');
 		background-repeat: repeat;
         font-family: 'Comic Sans MS', sans-serif;
 		margin: 30px;
@@ -15,17 +15,24 @@
     p,ul {
         color: orange;
 		text-align: left;
+		font-size: 15pt;
+		font-weight: bold;
     }
 	div.column {
 		max-width: 700px;
 		align-self: center;
+		background-color: rgba(0, 0, 0, 0.5);
+		padding: 20px;
+	}
+	h1,h2{
+        color: orange;
 	}
 </style>
 </head>
 <body>
 
 <div class="column">
-	<h1>neutriNO</h1>
+	<h1>neutriNO!!</h1>
 	<h2>Neutrinos are probably not real</h2>
 
 	<p>Neutrinos are subatomic particles that are extremely difficult to detect due to their extremely small mass and lack of charge. They were first proposed in 1930 by physicist Wolfgang Pauli, and were later "discovered" by Clyde Cowan and Frederick Reines in 1956. The dawn of neutrino experiments were closely tied to post world war 2 American 
