--- a/neutriNO.html
+++ b/neutriNO.html
@@ -47,7 +47,7 @@
 	reactions to be detected by these experiments placed close by.  But these experiments become 
 	much more sinister when you realize that there are no neutrinos. 
 	</p>
-	<img src="neutriNO-images/inline_1_redbg_0-web.PNG" class="scary_image">
+	<img src="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/inline_1_redbg_0-web.png" class="scary_image">
 	<p>These experiments allowed these scientists and their colliegs access to some of the 
 	governments most secure locations. Places guarded by armed men and requiring the highest of 
 	security clearances. Neutrino experiments were a convinient excuse for these men, likely 
