added more images

--- a/neutriNO.html
+++ b/neutriNO.html
@@ -3,8 +3,9 @@
 <title>Neutrinos: The Mysterious Particles</title>
 <style>
     body {
-		background-image: url('neutriNO-images/grid3.png');
+		background-image: url('neutriNO-images/grid_BG.png');
 		background-repeat: repeat;
+		background-size: 200px;
         font-family: 'Comic Sans MS', sans-serif;
 		margin: 30px;
 		text-align: center;
@@ -21,7 +22,7 @@
 	div.column {
 		max-width: 700px;
 		align-self: center;
-		background-color: rgba(0, 0, 0, 0.5);
+		background-color: rgba(0, 0, 0, 0.7);
 		padding: 20px;
 	}
 	h1,h2{
@@ -31,6 +32,10 @@
 		max-width: 600px;
 		min-width: 300px;
 		width: 50%;
+	}
+	img.wide_image{
+		width: 100%;
+		filter: invert(100%);
 	}
 </style>
 </head>
@@ -63,6 +68,7 @@
 	  <li>Neutrinos are estimated to be the second most abundant particle in the universe, after photons. Then where are they</li>
 	  <li>Neutrinos are produced by nuclear reactions, such as those in the sun and other stars. Of course they want anothre reason to study nuclear reactions.</li>
 	</ul>
+	<img src="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/NeutriNO experiment DUNE.png" class="wide_image">
 	
 </div>
 </body>
