--- a/neutriNO.html
+++ b/neutriNO.html
@@ -68,7 +68,7 @@
 	  <li>Neutrinos are estimated to be the second most abundant particle in the universe, after photons. Then where are they</li>
 	  <li>Neutrinos are produced by nuclear reactions, such as those in the sun and other stars. Of course they want anothre reason to study nuclear reactions.</li>
 	</ul>
-	<img src="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/NeutriNO experiment DUNE.png" class="wide_image">
+	<img src="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/NeutriNO experiment DUNE cropped.png" class="wide_image">
 	
 </div>
 </body>
