--- a/neutriNO.html
+++ b/neutriNO.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 <title>Neutrinos: The Mysterious Particles</title>
+  <link rel="icon" type="image/x-icon" href="neutriNO-images/blue_sphere.png">
 <style>
     body {
-		background-image: url('neutriNO-images/grid_BG.png');
+		background-image: url('https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/grid_BG.png');
 		background-repeat: repeat;
 		background-size: 200px;
         font-family: 'Comic Sans MS', sans-serif;
