--- a/neutriNO.html
+++ b/neutriNO.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Neutrinos: The Mysterious Particles</title>
-  <link rel="icon" type="image/x-icon" href="neutriNO-images/blue_sphere.png">
+<title>Neutrinos aren't real</title>
+  <link rel="icon" type="image/x-icon" href="neutriNO-images/blue_sphere.ico">
 <style>
     body {
 		background-image: url('https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/grid_BG.png');
