--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<div class="allthings">
 	
 		<div id="title" class="header2">
+			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=588a4qooieq&amp;m=7&amp;c=0006ff&amp;cr1=00fff6&amp;f=arial&amp;l=33&amp;s=170" async="async"></script> -->
+			<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script>
 			<img src="logos/MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
 			<h4>(she/her)</h4>
@@ -31,7 +33,8 @@
 				<p id="cmu"></p>
 				<p>I'm on a Physics PhD track due to graduate in 2024 (hopefully).</p>
 				<p>I'm currently studying Lattice QCD for my thesis under the mentorship of Dr. Colin Morningstar.</p>
-				<p>Check out my <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Skinner%2C+Sarah%3B&terms-0-field=author&classification-physics=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p>
+				<!-- <p>Check out my <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Skinner%2C+Sarah%3B&terms-0-field=author&classification-physics=y&classification-physics_archives=all&classification-include_cross_list=include&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p> -->
+				<p>Check out my <a href="https://scholar.google.com/citations?user=F7i_vbMAAAAJ&hl=en&inst=3203679203499159833" target="_blank">papers</a> and <a href="posters.html" target="_blank">posters</a>.</p>
 			</div>
 			<div id="item1" class="content"> 
 				<a href="https://github.com/xinucode" target="_blank"><img src="logos/github.png" alt="Github" class="logo"></a>
@@ -41,6 +44,7 @@
 			</div>
 			<div id="item3" class="content">
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
+				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a> -->
 				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
 			</div>
