--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	
 		<div id="title" class="header2">
 			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=588a4qooieq&amp;m=7&amp;c=0006ff&amp;cr1=00fff6&amp;f=arial&amp;l=33&amp;s=170" async="async"></script> -->
-			<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script>
 			<img src="logos/MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
 			<h1>Sarah Skinner</h1>
 			<h4>(she/her)</h4>
@@ -43,7 +42,8 @@
 				<p>See my code contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
+				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank">
+			<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script></a>
 				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a> -->
 				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
