--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 				<p>See my code contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank">
-			<script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp;s=130&amp;c=ff0000&amp;t=1" async="async"></script></a>
-				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a> -->
+				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"> -->
+			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp?;s=130&amp;c=ff0000&amp;t=1" async="async"></script></a> -->
+				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
 				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
 			</div>
@@ -73,6 +73,7 @@
 		</div>
 		<div class="header">
 			<hr>
+			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp?;s=130&amp;c=ff0000&amp;t=1" async="async"></script> -->
 			<div id="tim" class="randomemoji"></div>
 			<a href="#title" class="backtotop" id="backtotop">Back to top</a>
 		</div>
