--- a/neutriNO.html
+++ b/neutriNO.html
@@ -79,6 +79,7 @@
 	<p>The question: What is the government really doing in these underground layers?</p>
 	<p>No one other than these supposed scientists are going to have access to this mine, so what is really happening down there. The clues include the need for space underground, the need for 2 locations and the DUNE acronym itself. The government has long used 2 sided acronyms to prevent the leaking of information. If enemy agents or concerned citizens learn of the DUNE program, but are fed a false narrative about the meaning, their concerns can be more easily dismissed.</p>
 	<h3>DUNE - Detention for Unregistered Nuclear Extremists</h3>
+	<img src="https://raw.githubusercontent.com/xinucode/xinucode.github.io/main/neutriNO-images/dino-beam.jpg" class="wide_image">
 	<p>I believe that these holes are prisons, for enemies of the state. Specifically those that have smuggled nuclear materials into the United States inside their person. These Nuclear Mules were sent in with enough material and knowledge to make dirty bombs. These were highly dangerous individuals, given they could work alone and given the radiation they were exposed to through conveying the materials, were already destined to die.</p> 
 	<p>The US government learned of these terrorist threats only after their airport nuclear monitors had gone off (yes, the airports are monitored for nuclear activity). </p>
 
