--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 
 	<div class="allthings">
 	
-		<div id="title" class="header2">
-			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=588a4qooieq&amp;m=7&amp;c=0006ff&amp;cr1=00fff6&amp;f=arial&amp;l=33&amp;s=170" async="async"></script> -->
-			<img src="logos/MeLogo3.png" alt="Xinu" class="melogo" id="melogo">
-			<h1>Sarah Skinner</h1>
-			<h4>(she/her)</h4>
-			<h3>That's me. This is what I'm doing right now.</h3>
-			<h3 id="intro"></h3>
+		<div id="title" class="header3">
+			<img src="logos/MeLogo3.png" alt="Xinu" id="melogo" style="height: 180px;">
+			<div>
+				<h1>Sarah Skinner</h1>
+				<h4>(she/her)</h4>
+				<h3>That's me. This is what I'm doing right now.</h3>
+				<h3 id="intro"></h3>
+			</div>
+			<div style="height: 180px;width: 180px;"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=180" async="async"></script></div>
 		</div>
+		
 		<div class="header">
 			<hr>
 		</div>
@@ -42,8 +45,6 @@
 				<p>See my code contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
-				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"> -->
-			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp?;s=130&amp;c=ff0000&amp;t=1" async="async"></script></a> -->
 				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
 				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
@@ -73,7 +74,6 @@
 		</div>
 		<div class="header">
 			<hr>
-			<!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/2.js?i=5emholyldpw&amp;m=0&amp?;s=130&amp;c=ff0000&amp;t=1" async="async"></script> -->
 			<div id="tim" class="randomemoji"></div>
 			<a href="#title" class="backtotop" id="backtotop">Back to top</a>
 		</div>
