--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
 				<p>See my code contributions to collaborations as well as individual projects.</p>
 			</div>
 			<div id="item3" class="content">
-				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
-				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
+				<a href="posters/Sarah_Skinner_Resume.pdf" target="_blank"><img src="logos/resume.png" alt="Resume" class="logo"></a>
+				<a  class="title" href="posters/Sarah_Skinner_Resume.pdf" target="_blank"><h2>Resume</h2></a>
+				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a> -->
+				<!-- <a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a> -->
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
 			</div>
 			<div id="item2" class="content">
