--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
 				<p>Hire me online as a freelancer.</p>
 				<p id="upwork"></p>
 			</div>
+			<div id="item6" class="content">
+				<a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a>
+				<a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a>
+				<p>Connect with me on LinkedIn.</p>
+			</div>
 			<div id="item5" class="content">
 				<a href="https://www.xinuwrite.com/"><img src="logos/MeLogo3-circle-417077.png" alt="Xinuwrite" class="logo"></a>
 				<a  class="title" href="https://www.xinuwrite.com/"><h2>Xinuwrite</h2></a>
