readded my earth again

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<h3>That's me. This is what I'm doing right now.</h3>
 				<h3 id="intro"></h3>
 			</div>
-			<!-- <div style="height: 180px;width: 180px;"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=180" async="async"></script></div> -->
+			<div style="height: 180px;width: 180px;"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=180" async="async"></script></div>
 		</div>
 		<script src="js/leon.js"></script>
 		<script>
