--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 		<script src="js/leon.js"></script>
 		<script>
-			var leon, canvas, ctx;
+			var leon, leon2, canvas, ctx;
 
 			var sw = 360;
 			var sh = 70;
@@ -38,7 +38,7 @@
 			
 				if (window.screen.width<460){
 					sw = 0.7*window.screen.width;
-					sh = 50;
+					sh = 100;
 				}
 				canvas = document.getElementById('me');
 				ctx = canvas.getContext("2d");
@@ -49,7 +49,7 @@
 				canvas.style.height = sh + 'px';
 				ctx.scale(pixelRatio, pixelRatio);
 
-				if (window.screen.width<460){
+				if (window.screen.width>=460){
 					leon = new LeonSans({
 						text: 'Sarah Skinner',
 						color: ['white'],
@@ -57,11 +57,19 @@
 						weight: 300
 					});
 				}else{
+					console.log("not working");
+					console.log(window.screen.width);
 					leon = new LeonSans({
-						text: 'Sarah Skinner',
+						text: 'Sarah',
 						color: ['white'],
 						size: 40,
-						weight: 0.65*window.screen.width
+						weight: 0.60*window.screen.width
+					});
+					leon2 = new LeonSans({
+						text: 'Skinner',
+						color: ['white'],
+						size: 40,
+						weight: 0.60*window.screen.width
 					});
 				}
 				
@@ -81,6 +89,18 @@
 					});
 				}
 
+				if (window.screen.width<460){
+					let ii, totali = leon.drawing.length;
+					for (ii = 0; ii < totali; ii++) {
+						TweenMax.fromTo(leon2.drawing[ii], 1.6, {
+							value: 0
+						}, {
+							delay: ii * 0.05,
+							value: 1,
+							ease: Power4.easeOut
+						});
+					}
+				}
 				requestAnimationFrame(animate);
 			}
 
@@ -89,10 +109,14 @@
 
 				ctx.clearRect(0, 0, sw, sh);
 
-				const x = (sw - leon.rect.w) / 2;
-				const y = (sh - leon.rect.h) / 2;
+				var x = (sw - leon.rect.w) / 2;
+				var y = (sh - leon.rect.h) / 2;
+				if (window.screen.width<460){
+					var y = (sh - leon.rect.h) / 3;
+					leon2.position(x, y*2);
+					leon2.draw(ctx);
+				}
 				leon.position(x, y);
-
 				leon.draw(ctx);
 			}
 
