--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<canvas id="me"></canvas>
 				<!-- <h1>Sarah Skinner</h1> -->
 				<h4>(she/her)</h4>
-				<h3>That's me. This is what I'm doing right now.</h3>
+				<h3 style="padding: 0 10px 0 10px;">That's me. This is what I'm doing right now.</h3>
 				<h3 id="intro"></h3>
 			</div>
 			<div style="height: 180px;width: 180px;"><script type="text/javascript" src="//rf.revolvermaps.com/0/0/8.js?i=5a95pig54cb&amp;m=7&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=33&amp;s=180" async="async"></script></div>
@@ -153,14 +153,8 @@
 				<p>See my code contributions to collaborations as well as individual projects.</p>
 				</div>
 			</div>
-			<div id="item2" class="content">
-				<div class="contentinner">
-				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
-				<a  class="title" href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><h2>Upwork</h2></a>
-				<p>Hire me online as a freelancer.</p>
-				<p id="upwork"></p>
-				</div>
-			</div>
+		</div>
+		<div class="contentbox">
 			<div id="item3" class="content">
 				<div class="contentinner">
 				<a href="posters/Sarah_Skinner_Resume.pdf" target="_blank"><img src="logos/resume.png" alt="Resume" class="logo"></a>
@@ -168,6 +162,14 @@
 				<!-- <a href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><img src="logos/linkedin.png" alt="LinkedIn" class="logo"></a> -->
 				<!-- <a  class="title" href="https://www.linkedin.com/in/sarah-skinner-916038156/" target="_blank"><h2>LinkedIn</h2></a> -->
 				<p id="linkedin">Check out my resume and then offer me a job. &#129488</p>
+				</div>
+			</div>
+			<div id="item2" class="content">
+				<div class="contentinner">
+				<a href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><img src="logos/upwork-icon.png" alt="UpWork" class="logo"></a>
+				<a  class="title" href="https://www.upwork.com/freelancers/~01a120b13dd5d61cae" target="_blank"><h2>Upwork</h2></a>
+				<p>Hire me online as a freelancer.</p>
+				<p id="upwork"></p>
 				</div>
 			</div>
 			<div id="item6" class="content">
